Extend directory scan (progress & abort)
